tests/algorithms/x/Java/machine_learning/data_transformations.error
compile: exit status 1
/tmp/TestJavaTranspiler_Algorithms_Golden500_data_transformations1116056650/001/Main.java:65: error: incompatible types: double[] cannot be converted to int[]
        double x_min = ((Number)(_min(data))).doubleValue();
                                      ^
/tmp/TestJavaTranspiler_Algorithms_Golden500_data_transformations1116056650/001/Main.java:66: error: incompatible types: double[] cannot be converted to int[]
        double x_max = ((Number)(_max(data))).doubleValue();
                                      ^
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
2 errors
